--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,14 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.0.0</version>
+                <configuration>
+                    <mainClass>com.henrikroslund.Main</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
