--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,11 +13,11 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up JDK 15
+    - uses: actions/setup-java@v3.0.0
+    - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
-        java-version: '15'
+        java-version: '17'
         distribution: 'adopt'
     - name: Build with Maven
       run: mvn test
